# HW13_django_finance

./: pyproject.toml  readme.md  specification.md
finance/finance/: settings.py  urls.py
finance/financeapp/: admin.py  context_processors.py  forms.py  models.py  urls.py  utils.py  views.py
finance/financeapp/migrations/: 0001_initial.py  0002_alter_balance_user_alter_cashincategories_user_and_more.py  0003_remove_cashincategories_user_and_more.py  0004_remove_contractor_user_alter_balance_last_modified_and_more.py  0005_alter_contractor_description.py  0006_alter_contractor_description.py  0007_alter_contractor_description.py  0008_alter_contractor_description.py  0009_alter_contractor_description.py  0010_alter_contractor_description.py  0011_alter_cashin_description_alter_cashout_description_and_more.py
finance/financeapp/sql/: query.sql
finance/financeapp/static/financeapp/: style.css
finance/financeapp/templates/financeapp/: base.html
finance/financeapp/templates/financeapp/edit/: catinedit.html  catoutedit.html  contractoredit.html
finance/financeapp/templates/financeapp/pages/: cashflowreport.html  cashin.html  cashinlog.html  cashout.html  cashoutlog.html
finance/users/: forms.py  urls.py  views.py
finance/users/templates/users/: login.html  signup.html
